--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1160,9 +1160,9 @@ allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
-allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1378,7 +1378,6 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:e300:b:b::b;
-allow 2a0d:8140:1fff:c510::1;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
 allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
 allow 2a0d:bbc7::f816:3eff:fe12:1851;
@@ -1723,6 +1722,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1744,7 +1744,6 @@ allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
 allow 5.255.98.23;
-allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
@@ -1804,7 +1803,6 @@ allow 80.94.92.99;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.248.205;
-allow 82.153.138.7;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
