--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1160,9 +1160,9 @@ deny 2a04:52c0:101:46a::;
 deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
-deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1378,7 +1378,6 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
 deny 2a0c:e300:b:b::b;
-deny 2a0d:8140:1fff:c510::1;
 deny 2a0d:bbc7::f816:3eff:fe0b:181b;
 deny 2a0d:bbc7::f816:3eff:fe0b:58d3;
 deny 2a0d:bbc7::f816:3eff:fe12:1851;
@@ -1723,6 +1722,7 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1744,7 +1744,6 @@ deny 5.255.97.221;
 deny 5.255.98.151;
 deny 5.255.98.198;
 deny 5.255.98.23;
-deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
@@ -1804,7 +1803,6 @@ deny 80.94.92.99;
 deny 81.16.33.42;
 deny 81.17.28.95;
 deny 82.118.248.205;
-deny 82.153.138.7;
 deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.139.190;
