--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -7,6 +7,7 @@ allow 2001:1b60:3:221:701:102:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
 allow 2001:41d0:1008:20d1::1;
+allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
@@ -132,6 +133,7 @@ allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
