--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -122,6 +122,7 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 118.193.64.139;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -148,13 +149,6 @@ allow 141.98.11.62;
 allow 144.126.133.74;
 allow 144.208.79.169;
 allow 146.103.43.17;
-allow 146.19.143.119;
-allow 146.19.143.132;
-allow 146.19.143.16;
-allow 146.19.143.181;
-allow 146.19.143.225;
-allow 146.19.143.54;
-allow 146.19.143.92;
 allow 146.19.254.163;
 allow 146.19.254.165;
 allow 146.59.126.232;
@@ -224,11 +218,6 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
-allow 176.124.32.101;
-allow 176.124.32.122;
-allow 176.124.32.130;
-allow 176.124.32.145;
-allow 176.124.32.171;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
@@ -293,14 +282,6 @@ allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
-allow 185.123.53.164;
-allow 185.123.53.165;
-allow 185.123.53.174;
-allow 185.123.53.184;
-allow 185.123.53.217;
-allow 185.123.53.22;
-allow 185.123.53.226;
-allow 185.123.53.42;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.2;
@@ -604,11 +585,6 @@ allow 192.42.116.27;
 allow 192.42.116.28;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.109.120.199;
-allow 193.109.120.230;
-allow 193.109.120.59;
-allow 193.109.120.71;
-allow 193.109.120.8;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -622,8 +598,6 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
-allow 193.233.201.122;
-allow 193.233.201.93;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.140;
@@ -638,12 +612,6 @@ allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.15.36.117;
-allow 194.26.141.106;
-allow 194.26.141.109;
-allow 194.26.141.110;
-allow 194.26.141.24;
-allow 194.26.141.45;
-allow 194.26.141.75;
 allow 194.26.192.77;
 allow 194.53.137.102;
 allow 194.87.55.98;
@@ -803,6 +771,7 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:545c::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1449,54 +1418,6 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
-allow 2a10:1fc0:1::1078:9b3b;
-allow 2a10:1fc0:1::145a:4f4d;
-allow 2a10:1fc0:1::1c97:5209;
-allow 2a10:1fc0:1::201b:fde8;
-allow 2a10:1fc0:1::27c8:f14;
-allow 2a10:1fc0:1::28e8:2439;
-allow 2a10:1fc0:1::2acd:670c;
-allow 2a10:1fc0:1::3120:be14;
-allow 2a10:1fc0:1::317b:c7b3;
-allow 2a10:1fc0:1::3a85:fc4a;
-allow 2a10:1fc0:1::463b:c574;
-allow 2a10:1fc0:1::4953:f0d1;
-allow 2a10:1fc0:1::49fd:671e;
-allow 2a10:1fc0:1::6e6d:3f93;
-allow 2a10:1fc0:1::7028:40e3;
-allow 2a10:1fc0:1::7072:6325;
-allow 2a10:1fc0:1::709e:5af4;
-allow 2a10:1fc0:1::736f:432a;
-allow 2a10:1fc0:1::86d8:ed21;
-allow 2a10:1fc0:1::902c:9891;
-allow 2a10:1fc0:1::91c7:7465;
-allow 2a10:1fc0:1::97fa:bc35;
-allow 2a10:1fc0:1::9862:7394;
-allow 2a10:1fc0:1::9a61:242e;
-allow 2a10:1fc0:1::9c89:5f8;
-allow 2a10:1fc0:1::9ef2:318e;
-allow 2a10:1fc0:1::a04e:42ef;
-allow 2a10:1fc0:1::a06f:421;
-allow 2a10:1fc0:1::a187:7bdf;
-allow 2a10:1fc0:1::a2d9:c960;
-allow 2a10:1fc0:1::a8af:1603;
-allow 2a10:1fc0:1::a94d:cec3;
-allow 2a10:1fc0:1::b989:f19b;
-allow 2a10:1fc0:1::b9b6:1c9a;
-allow 2a10:1fc0:1::bf4a:70cd;
-allow 2a10:1fc0:1::c181:cad7;
-allow 2a10:1fc0:1::c5e5:1656;
-allow 2a10:1fc0:1::c81a:ecdc;
-allow 2a10:1fc0:1::c89d:565d;
-allow 2a10:1fc0:1::cae0:9c9;
-allow 2a10:1fc0:1::cfba:db18;
-allow 2a10:1fc0:1::d3ed:ed37;
-allow 2a10:1fc0:1::d3f0:7036;
-allow 2a10:1fc0:1::d54e:8f12;
-allow 2a10:1fc0:1::d6af:9460;
-allow 2a10:1fc0:1::d8fd:efbf;
-allow 2a10:1fc0:1::da9b:f7cd;
-allow 2a10:1fc0:1::df12:4fa1;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1576,6 +1497,7 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1602,7 +1524,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1611,19 +1532,13 @@ allow 43.160.194.14;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
-allow 45.129.199.122;
-allow 45.129.199.159;
-allow 45.129.199.162;
-allow 45.129.199.235;
-allow 45.129.199.239;
-allow 45.129.199.70;
-allow 45.129.199.84;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.137.70.158;
+allow 45.137.99.16;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
@@ -1709,6 +1624,7 @@ allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
 allow 46.183.216.212;
+allow 46.183.217.211;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1790,9 +1706,6 @@ allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.237;
 allow 77.48.28.239;
-allow 77.72.85.133;
-allow 77.72.85.168;
-allow 77.72.85.176;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 80.241.60.207;
@@ -1861,11 +1774,6 @@ allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.227.114.153;
-allow 91.235.234.143;
-allow 91.235.234.145;
-allow 91.235.234.67;
-allow 91.235.234.74;
-allow 91.235.234.92;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
