--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -122,6 +122,7 @@ deny 109.71.252.182;
 deny 109.71.252.88;
 deny 109.71.252.97;
 deny 114.35.245.150;
+deny 118.163.74.160;
 deny 118.193.64.139;
 deny 121.78.28.166;
 deny 123.253.35.32;
@@ -148,13 +149,6 @@ deny 141.98.11.62;
 deny 144.126.133.74;
 deny 144.208.79.169;
 deny 146.103.43.17;
-deny 146.19.143.119;
-deny 146.19.143.132;
-deny 146.19.143.16;
-deny 146.19.143.181;
-deny 146.19.143.225;
-deny 146.19.143.54;
-deny 146.19.143.92;
 deny 146.19.254.163;
 deny 146.19.254.165;
 deny 146.59.126.232;
@@ -224,11 +218,6 @@ deny 173.237.206.68;
 deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.121.81.51;
-deny 176.124.32.101;
-deny 176.124.32.122;
-deny 176.124.32.130;
-deny 176.124.32.145;
-deny 176.124.32.171;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.58.89.182;
@@ -293,14 +282,6 @@ deny 185.112.146.167;
 deny 185.113.128.30;
 deny 185.120.16.171;
 deny 185.120.16.176;
-deny 185.123.53.164;
-deny 185.123.53.165;
-deny 185.123.53.174;
-deny 185.123.53.184;
-deny 185.123.53.217;
-deny 185.123.53.22;
-deny 185.123.53.226;
-deny 185.123.53.42;
 deny 185.129.61.1;
 deny 185.129.61.10;
 deny 185.129.61.2;
@@ -604,11 +585,6 @@ deny 192.42.116.27;
 deny 192.42.116.28;
 deny 193.105.134.150;
 deny 193.105.134.155;
-deny 193.109.120.199;
-deny 193.109.120.230;
-deny 193.109.120.59;
-deny 193.109.120.71;
-deny 193.109.120.8;
 deny 193.189.100.194;
 deny 193.189.100.195;
 deny 193.189.100.196;
@@ -622,8 +598,6 @@ deny 193.189.100.203;
 deny 193.189.100.204;
 deny 193.189.100.205;
 deny 193.189.100.206;
-deny 193.233.201.122;
-deny 193.233.201.93;
 deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.26.115.140;
@@ -638,12 +612,6 @@ deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
 deny 194.15.36.117;
-deny 194.26.141.106;
-deny 194.26.141.109;
-deny 194.26.141.110;
-deny 194.26.141.24;
-deny 194.26.141.45;
-deny 194.26.141.75;
 deny 194.26.192.77;
 deny 194.53.137.102;
 deny 194.87.55.98;
@@ -803,6 +771,7 @@ deny 2001:67c:e60:c0c:192:42:116:217;
 deny 2001:67c:e60:c0c:192:42:116:218;
 deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:b011:4006:545c::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1449,54 +1418,6 @@ deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
-deny 2a10:1fc0:1::1078:9b3b;
-deny 2a10:1fc0:1::145a:4f4d;
-deny 2a10:1fc0:1::1c97:5209;
-deny 2a10:1fc0:1::201b:fde8;
-deny 2a10:1fc0:1::27c8:f14;
-deny 2a10:1fc0:1::28e8:2439;
-deny 2a10:1fc0:1::2acd:670c;
-deny 2a10:1fc0:1::3120:be14;
-deny 2a10:1fc0:1::317b:c7b3;
-deny 2a10:1fc0:1::3a85:fc4a;
-deny 2a10:1fc0:1::463b:c574;
-deny 2a10:1fc0:1::4953:f0d1;
-deny 2a10:1fc0:1::49fd:671e;
-deny 2a10:1fc0:1::6e6d:3f93;
-deny 2a10:1fc0:1::7028:40e3;
-deny 2a10:1fc0:1::7072:6325;
-deny 2a10:1fc0:1::709e:5af4;
-deny 2a10:1fc0:1::736f:432a;
-deny 2a10:1fc0:1::86d8:ed21;
-deny 2a10:1fc0:1::902c:9891;
-deny 2a10:1fc0:1::91c7:7465;
-deny 2a10:1fc0:1::97fa:bc35;
-deny 2a10:1fc0:1::9862:7394;
-deny 2a10:1fc0:1::9a61:242e;
-deny 2a10:1fc0:1::9c89:5f8;
-deny 2a10:1fc0:1::9ef2:318e;
-deny 2a10:1fc0:1::a04e:42ef;
-deny 2a10:1fc0:1::a06f:421;
-deny 2a10:1fc0:1::a187:7bdf;
-deny 2a10:1fc0:1::a2d9:c960;
-deny 2a10:1fc0:1::a8af:1603;
-deny 2a10:1fc0:1::a94d:cec3;
-deny 2a10:1fc0:1::b989:f19b;
-deny 2a10:1fc0:1::b9b6:1c9a;
-deny 2a10:1fc0:1::bf4a:70cd;
-deny 2a10:1fc0:1::c181:cad7;
-deny 2a10:1fc0:1::c5e5:1656;
-deny 2a10:1fc0:1::c81a:ecdc;
-deny 2a10:1fc0:1::c89d:565d;
-deny 2a10:1fc0:1::cae0:9c9;
-deny 2a10:1fc0:1::cfba:db18;
-deny 2a10:1fc0:1::d3ed:ed37;
-deny 2a10:1fc0:1::d3f0:7036;
-deny 2a10:1fc0:1::d54e:8f12;
-deny 2a10:1fc0:1::d6af:9460;
-deny 2a10:1fc0:1::d8fd:efbf;
-deny 2a10:1fc0:1::da9b:f7cd;
-deny 2a10:1fc0:1::df12:4fa1;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1576,6 +1497,7 @@ deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.114.50.124;
@@ -1602,7 +1524,6 @@ deny 38.135.25.142;
 deny 38.135.25.143;
 deny 38.135.25.144;
 deny 38.135.25.2;
-deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1611,19 +1532,13 @@ deny 43.160.194.14;
 deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.133.242;
-deny 45.129.199.122;
-deny 45.129.199.159;
-deny 45.129.199.162;
-deny 45.129.199.235;
-deny 45.129.199.239;
-deny 45.129.199.70;
-deny 45.129.199.84;
 deny 45.132.246.245;
 deny 45.13.225.69;
 deny 45.13.225.78;
 deny 45.133.74.53;
 deny 45.134.225.36;
 deny 45.137.70.158;
+deny 45.137.99.16;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.164;
@@ -1709,6 +1624,7 @@ deny 45.95.169.110;
 deny 45.95.169.252;
 deny 46.165.243.36;
 deny 46.183.216.212;
+deny 46.183.217.211;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1790,9 +1706,6 @@ deny 77.48.28.193;
 deny 77.48.28.204;
 deny 77.48.28.237;
 deny 77.48.28.239;
-deny 77.72.85.133;
-deny 77.72.85.168;
-deny 77.72.85.176;
 deny 77.81.247.72;
 deny 78.142.18.219;
 deny 80.241.60.207;
@@ -1861,11 +1774,6 @@ deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.236.91;
 deny 91.227.114.153;
-deny 91.235.234.143;
-deny 91.235.234.145;
-deny 91.235.234.67;
-deny 91.235.234.74;
-deny 91.235.234.92;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
