--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -148,6 +148,7 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 144.126.133.74;
 allow 146.103.43.17;
+allow 146.19.254.154;
 allow 146.19.254.163;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -647,6 +648,7 @@ allow 198.96.155.3;
 allow 198.98.48.33;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.218;
 allow 198.98.57.74;
@@ -764,6 +766,7 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.3;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
